--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -35,7 +35,7 @@
 <ion-footer class="footer-tab-custom">
 	<ul>
 		<li (click)="home()" class="active"><img src="assets/imgs/home-active.png"><span>Home</span></li>
-		<li class=""><img src="assets/imgs/group.png"><span>Group</span></li>
+		<li (click)="grouplist()"><img src="assets/imgs/group.png"><span>Group</span></li>
 		<li class=""><img src="assets/imgs/user.png"><span>User</span></li>
 		<li class=""><img src="assets/imgs/post.png"><span>Post</span></li>
 		<li class=""><img src="assets/imgs/event.png"><span>Events</span></li>
