--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyDYFY2fp_meJiSEKve5pDJk9Kzr_oDOlPk&libraries=places&language=en-US"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true&key=AIzaSyDYFY2fp_meJiSEKve5pDJk9Kzr_oDOlPk&libraries=places&language=en-US"></script>
 </head>
 <body>
 
