--- a/src/pages/grouplist/grouplist.html
+++ b/src/pages/grouplist/grouplist.html
@@ -4,15 +4,61 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>grouplist</ion-title>
+<ion-header>
+  <ion-navbar no-border-bottom>
+    <ion-buttons start>
+      <button ion-button icon-only>
+        <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>
+      <ion-searchbar></ion-searchbar>
+    </ion-title>
   </ion-navbar>
 
+  <ion-toolbar no-border-top class="custom-toolbar">
+    <ion-segment [(ngModel)]="pet">
+      <ion-segment-button value="group">
+        <ion-icon ios="ios-people" md="md-people"></ion-icon> My Group
+      </ion-segment-button>
+      <ion-segment-button value="nearby">
+        <ion-icon ios="ios-pin" md="md-pin"></ion-icon> Nearby
+      </ion-segment-button>
+      <ion-segment-button value="create" (click)="createGroup()">
+        <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon> Create
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
-
 <ion-content padding>
+    <ion-item class="range-holder">
+      <ion-range min="0" max="100" pin="true" [(ngModel)]="contrast">
+        <div range-left small>0</div>
+        <div range-right>100</div>
+      </ion-range>
+    </ion-item>
+    <div [ngSwitch]="pet">
+      <ion-list *ngSwitchCase="'group'">
+        <ion-card class="chat-list-card" *ngFor="let mygrp of allMyGroup">
+          <div class="image-holder" (click)="gotoGroupDetails(mygrp.id)">
+            <img [src]="mygrp.image_url" alt="">
+          </div>
+          <div class="info-holder">
+              <h2 (click)="gotoGroupDetails(mygrp.id)">{{mygrp.name}}</h2>
+              <div class="round" (click)="gotoEditGroup(mygrp.id)">
+                <ion-icon style="padding: 5px 0px 0px 7px;" ios="ios-settings" md="md-settings"></ion-icon>
+              </div>
+              <!--<p><span><img src="./assets/imgs/distance.png" alt=""></span>2km</p>-->
+              <p class="date">{{mygrp.last_activity | date:'LLL dd'}}</p>
+          </div>
+        </ion-card>
+      </ion-list>
 
+      <ion-list *ngSwitchCase="'nearby'">
+        <h2>Comming Soon...</h2>
+      </ion-list>
+    </div>
 </ion-content>
+
